fix: flush STOMP when no tx, use Arrays.asList for null elements